Fix course management layout. Reduce padding in admin settings block and improve spinner position
Ensure filemanager always has dotted box. Ensure never to wide

Fix page header causing horizontal scroll in FFox

Fix book module bullet types

Fix help icon positioning for mod edit forms. Fix positioning of advanced form options for mod edit.

Fix modal-lg width. Minor tweeks to some visiual problems

Only show ajax loading for mod pages when creation / update

Fix atto recording dialog

Keep minimum header size on amodule pages

Fix assignment page feedback and teacher info layout, fix filemanager file types, fix activity nav margin ffox

Fix admin menu on assign view, fix assign view positioning

Refine assignment view page. Add some top padding to password field on login page

Make TOC search functionality work in mobile mode

Fix pull-xs-right correctly

Put toolbox icons closer to page, label and book modules

Fix missing icon in admin menu navigation

Put feature spot text through filter

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -124,6 +124,9 @@ table.boxwidthwide {
         max-width: 30rem;
         width: 100%;
         background-color: rgba(255, 255, 255, 0.9);
+        #password {
+            margin-top: 1em;
+        }
     }
     // The site name.
     .snap-logo-sitename {
@@ -363,6 +366,9 @@ img.icon.hide {
 i.icon,
 p.tree_item:before {
     color: #999;
+}
+p.tree_item.hasicon i.nav-missing-icon:before {
+    content: '■'; // Where settings nav icon is missing use this.
 }
 
 .mediaplugin_videojs > div {
@@ -664,6 +670,11 @@ a.yui3-button,
 #page-header,
 #page-login-index #page {
     @include bg-cover;
+}
+
+#page-header {
+    overflow: hidden;
+    min-height: 250px;
 }
 
 .snap-media-object {
@@ -2955,6 +2966,9 @@ body.hascontinuecancel.path-site #page {
         min-width: 90%;
         height: 100%;
     }
+    video#player {
+        max-height: 50vh;
+    }
 }
 
 // -------------------------
@@ -3685,4 +3699,8 @@ section#region-main {
     .nav-item {
         margin-left: 0.2em;
     }
+}
+
+.modal-lg {
+    max-width: 900px;
 }
