--- a/scss/_filemanager.scss
+++ b/scss/_filemanager.scss
@@ -7,6 +7,7 @@
 
 .filemanager {
     font-family: $font-family-system;
+    max-width: 40em;
 
     .dndupload-message {
         font-size: small;
@@ -19,6 +20,16 @@
     .fp-restrictions {
         display: none;
     }
+
+    .fp-content {
+        border: 2px dashed #bbb;
+    }
+}
+
+// Make sure accepted file type information is on its own row and positioned nicely.
+div[data-fieldtype=filemanager] > p:nth-of-type(1) {
+    margin-top:1em;
+    width: 100%;
 }
 
 // Make filenames more reabable.
